[package]
name = "csvvy"
version = "0.0.0"
edition = "2021"
description = "csv parser"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
license = "MIT"
repository = "https://github.com/hougesen/csvvy"
keywords = ["csv"]
homepage = "https://github.com/hougesen/csvvy"
readme = "README.md"
categories = ["parser-implementations"]

[dependencies]
